kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  selector:
    app: blog
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
