kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
  namespace: blog
  annotations:
    kubernetes.io/ingress.global-static-ip-name: blog
    networking.gke.io/managed-certificates: munisystem.net
spec:
  backend:
    serviceName: blog
    servicePort: 80
